--- a/Lab300.md
+++ b/Lab300.md
@@ -20,8 +20,12 @@
 다운로드 링크를 클릭하세요.
 [install.zip](https://github.com/rnlduaeo/ADWCML/raw/master/install.zip) 
 
+다운로드 받은 zip파일은 압축을 풀고 추후 lab에서 활용합니다.
+
+**STEP 2: 오라클 클라우드 SIGN IN
+
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxMDEzOTUwXX0=
+eyJoaXN0b3J5IjpbMTk3MDY5MTk1OSwxMjEwMTM5NTBdfQ==
 -->
