--- a/Lab300.md
+++ b/Lab300.md
@@ -23,10 +23,10 @@
 다운로드 받은 zip파일은 압축을 풀고 추후 lab에서 활용합니다.
 
 **STEP 2: 오라클 클라우드 SIGN IN
-
+![enter image description here](https://lh3.googleusercontent.com/k_Tsar6cIheJ_wl-PkWNrvvGMGH_mCshO3c4vjqYkK00NNqw2cLOJ2KZcaS2NS5XOAeYrlVAEVcQ)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMD
-EzOTUwXX0=
+eyJoaXN0b3J5IjpbLTExMDI0MjY4NSw3NjMyMDYwMzcsMTk3MD
+Y5MTk1OSwxMjEwMTM5NTBdfQ==
 -->
