--- a/Lab300.md
+++ b/Lab300.md
@@ -25,8 +25,9 @@
 **STEP 2: 오라클 클라우드 SIGN IN
 ![enter image description here](https://lh3.googleusercontent.com/k_Tsar6cIheJ_wl-PkWNrvvGMGH_mCshO3c4vjqYkK00NNqw2cLOJ2KZcaS2NS5XOAeYrlVAEVcQ)
 
+![enter image description here](https://lh3.googleusercontent.com/fkl8eVzGyczvrpxi23B5CgNwD-TFNOod0gI36CjpEdG9k7LsT6crikVnhTbqCpnyQ-oftmacdKfY)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDI0MjY4NSw3NjMyMDYwMzcsMTk3MD
-Y5MTk1OSwxMjEwMTM5NTBdfQ==
+eyJoaXN0b3J5IjpbLTEyNzQxNDc3NzksNzYzMjA2MDM3LDE5Nz
+A2OTE5NTksMTIxMDEzOTUwXX0=
 -->
