--- a/Lab300.md
+++ b/Lab300.md
@@ -43,8 +43,15 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/MioHetVFWrmjchWuJvu1GCR0z9oH5a6xW8FsDa0BhlPi2bM23N-xrGKyHBJBvHOcks2jIgI6EEBt)
 
+![enter image description here](https://lh3.googleusercontent.com/WgjrdpioifSionSWTo5-OlFIIrWlgjE4btrHsCth_B0tvvad8PHJ37Yif2GjKPwrN64XPh0elFoQ)
+
+![enter image description here](https://lh3.googleusercontent.com/AAdicpXETzEj-GjJTLitKCe4mJgCMeo8k-vun89WI4tHi9BJJifoA2pb_uUBgzybDAF6Zn2sURsg)
+
+![enter image description here](https://lh3.googleusercontent.com/0KxKc_4toURqDUVZPULWQJiPJIF-pfVlbMf3hljHiGzTsgq5PbxjpS4Nfy1HjjhH07vhcqyPzUDQ)
+
+![enter image description here](https://lh3.googleusercontent.com/4gImuFDYua1OlwgOXp7YEzIufXd9FNy_tny3Wt-ianh5vRvnQNscePgO2-HF5T9pOYJPFOOwS096)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTc1NTkyMzYwLC0xMjc0MTQ3Nzc5LDc2Mz
-IwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1MF19
+eyJoaXN0b3J5IjpbMjAwNjU4MzIwMiwtMTI3NDE0Nzc3OSw3Nj
+MyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBdfQ==
 -->
