--- a/Lab300.md
+++ b/Lab300.md
@@ -62,8 +62,22 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/F0JXX1D60m0k6ujMS0PC4Ye33fhhEQCgM2xtAPylEZN4gMv7MZ71-hX66BIstLKXsyfLQdrw_29i)
 
+![enter image description here](https://lh3.googleusercontent.com/ObE1rCcoP6HNNcSdfH01kj1tje9-hyn6NX-lsiY7vyPnAVMEOGJtkfNE8uxPJGt6bFIkHkdj6_no)
+
+![enter image description here](https://lh3.googleusercontent.com/axLthNp-EjDuz8pCxxEztJcWBZp3TCXgt3WniFm-lH0WBgzxGeeVet_DB9IrDzqLuOnffELPVQiW)
+
+![enter image description here](https://lh3.googleusercontent.com/6FhIIgOEgONjSBQBWqKXesPMJv7bJMWgyepddTXikxWmzIPa90hsuWkUzuf6UEQRsW645NUhNPY7)
+
+![enter image description here](https://lh3.googleusercontent.com/jkMj7cnFZewTvWzzmGer1leqx55igqBZmfJtqKpafc4ODB6Toswm-6BHqDul-4TkY6B3kWUUvvkr)
+
+![enter image description here](https://lh3.googleusercontent.com/AFjxqvrS490_GAALXtE9IhxUw77u8TnHpKzPcxw_6k8YvDyP3Umf5H3MjHIlOdXMPS-GIZ-GZKYr)
+
+![enter image description here](https://lh3.googleusercontent.com/iQ8y1l0vwlRRIZiJrCFi_M1tGG7uGvwKSySd_Ao_FKqXmZ4F0TYM5FX3150wO4u0nUYr_M6vMm4_)
+
+![enter image description here](https://lh3.googleusercontent.com/J-UOtVktwN-kP0uPmKUTx9ejAGBnM8hdb5MffVDw75ZOTAtouswgggYxKxRtoeOfCQC0gdN0-4-q)
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDc3NTUwNTUsLTEyNzQxNDc3NzksNz
-YzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
+eyJoaXN0b3J5IjpbMjIxNjYyODQ2LC0xMjc0MTQ3Nzc5LDc2Mz
+IwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1MF19
 -->
