--- a/Lab300.md
+++ b/Lab300.md
@@ -25,9 +25,12 @@
 **STEP 2: 오라클 클라우드 SIGN IN**
 * 로그인이 안되어 있다면 로그인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/k_Tsar6cIheJ_wl-PkWNrvvGMGH_mCshO3c4vjqYkK00NNqw2cLOJ2KZcaS2NS5XOAeYrlVAEVcQ)
-* ㅇㄹ
-* 
-![enter image description here](https://lh3.googleusercontent.com/SHic1SedRmpOrNItv9cd5-Y9HO3LMXNV3nW2ECkUh-KbyGEvHPursMrvexOcOcui3dlATS97tC2F)
+	
+	![enter image description here](https://lh3.googleusercontent.com/SHic1SedRmpOrNItv9cd5-Y9HO3LMXNV3nW2ECkUh-KbyGEvHPursMrvexOcOcui3dlATS97tC2F)
+
+![enter image description here](https://lh3.googleusercontent.com/eJXmCpiKtUR4RMiMX9bBmaIWx_CzRT_lTQfPvhL7Xi975GH4GeNGNmhbNNcWcNNzx6deTBy7cF3I)
+
+* compute을 클릭합니다.
 ![enter image description here](https://lh3.googleusercontent.com/fkl8eVzGyczvrpxi23B5CgNwD-TFNOod0gI36CjpEdG9k7LsT6crikVnhTbqCpnyQ-oftmacdKfY)
 
 ![enter image description here](https://lh3.googleusercontent.com/VAhW98xpbRGJq_549c_s-STJP9LDi5gW0nVKR8ZAgNi5rTCKC1yELh_TVoar1K26HzBMKmSVPdGV)
@@ -83,6 +86,6 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNjM0NzYyMTgsLTEyNzQxNDc3NzksNz
+eyJoaXN0b3J5IjpbLTExNTM2NTkyMzgsLTEyNzQxNDc3NzksNz
 YzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
 -->
