--- a/Lab300.md
+++ b/Lab300.md
@@ -25,8 +25,8 @@
 **STEP 2: 오라클 클라우드 SIGN IN**
 * 로그인이 안되어 있다면 로그인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/k_Tsar6cIheJ_wl-PkWNrvvGMGH_mCshO3c4vjqYkK00NNqw2cLOJ2KZcaS2NS5XOAeYrlVAEVcQ)
-	
-	![enter image description here](https://lh3.googleusercontent.com/SHic1SedRmpOrNItv9cd5-Y9HO3LMXNV3nW2ECkUh-KbyGEvHPursMrvexOcOcui3dlATS97tC2F)
+
+![enter image description here](https://lh3.googleusercontent.com/SHic1SedRmpOrNItv9cd5-Y9HO3LMXNV3nW2ECkUh-KbyGEvHPursMrvexOcOcui3dlATS97tC2F)
 
 ![enter image description here](https://lh3.googleusercontent.com/eJXmCpiKtUR4RMiMX9bBmaIWx_CzRT_lTQfPvhL7Xi975GH4GeNGNmhbNNcWcNNzx6deTBy7cF3I)
 
@@ -34,6 +34,8 @@
 ![enter image description here](https://lh3.googleusercontent.com/fkl8eVzGyczvrpxi23B5CgNwD-TFNOod0gI36CjpEdG9k7LsT6crikVnhTbqCpnyQ-oftmacdKfY)
 
 ![enter image description here](https://lh3.googleusercontent.com/VAhW98xpbRGJq_549c_s-STJP9LDi5gW0nVKR8ZAgNi5rTCKC1yELh_TVoar1K26HzBMKmSVPdGV)
+
+**STEP 3: adwc 버켓을 생성하고 데이터를 업로드합니다.**
 
 ![
 ](https://lh3.googleusercontent.com/T6P-gwx1t6JTX0cr7caI8GY0LNKRtA_EFN4P6kvNHP_kdgi5fFxoRyf0MfG4MTgIsOh8oLeeHJfq)
@@ -86,6 +88,6 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNTM2NTkyMzgsLTEyNzQxNDc3NzksNz
-YzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
+eyJoaXN0b3J5IjpbMTU3ODY3NTgwMSwtMTI3NDE0Nzc3OSw3Nj
+MyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBdfQ==
 -->
