--- a/Lab300.md
+++ b/Lab300.md
@@ -36,6 +36,13 @@
 ![enter image description here](https://lh3.googleusercontent.com/VAhW98xpbRGJq_549c_s-STJP9LDi5gW0nVKR8ZAgNi5rTCKC1yELh_TVoar1K26HzBMKmSVPdGV)
 
 **STEP 3: adwc 버켓을 생성하고 데이터를 업로드합니다.**
+![enter image description here](https://lh3.googleusercontent.com/H6xf3A2FuhoHptS2NPcmTgVxhPXjyj6QAU5Yj8IzUYfH1faNXQYs-I7oWroM0t_NKCivhqBZ9__i)
+
+![enter image description here](https://lh3.googleusercontent.com/Cgvu3Dw49oXLAAu2m3Wo3uJEo3Zim7NfRDupW7dO0QTwp1AILPGLgox4VqTwgrIK361W7Luaz_EW)
+
+![enter image description here](https://lh3.googleusercontent.com/wMDpjpjt8Fk-Gyb0rR1rXg_QM5Zff4HzoFD2tbt9ejkDXaq4jhdD8L-eLwyJrc5hDQlEJWfgBe5l)
+
+
 
 ![
 ](https://lh3.googleusercontent.com/T6P-gwx1t6JTX0cr7caI8GY0LNKRtA_EFN4P6kvNHP_kdgi5fFxoRyf0MfG4MTgIsOh8oLeeHJfq)
@@ -88,6 +95,6 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU3ODY3NTgwMSwtMTI3NDE0Nzc3OSw3Nj
-MyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBdfQ==
+eyJoaXN0b3J5IjpbLTIwNjk4MDQ3NTcsLTEyNzQxNDc3NzksNz
+YzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
 -->
