--- a/Lab300.md
+++ b/Lab300.md
@@ -48,6 +48,12 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/kDcbZB5LmakHLAsE5zH2WXcA-i3o4mlm_DGxHrfF7D4hi_lbhatg8uWVUHZPpdnvkE-KP00B9Unx)
 
+![enter image description here](https://lh3.googleusercontent.com/kvCrmxMGU_iuu4b5ni6XxHKT91g3MDOVQLRRr4H_dbCN5iP8qwhRXD_rN9kc3ROCkkzUli2MqvA0)
+
+![enter image description here](https://lh3.googleusercontent.com/aupaIJFRMN1ZQj3FMkjRenECsMxFuB42cThpvyNtKS98dBxuKtjd38N2u7kTgrgBKnsgl7U6qmps)
+
+![enter image description here](https://lh3.googleusercontent.com/ST-S49idBRKrLILLCVcL2vue9-9HLd-LYDGSScE6EMAbUUJQMAcStcfGwQonffLrpT94vNjS9Dpq)
+
 
 
 ![
@@ -101,6 +107,6 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUyNzA3MjcyNiwtMTI3NDE0Nzc3OSw3Nj
-MyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBdfQ==
+eyJoaXN0b3J5IjpbNjYyNjAyNzk5LC0xMjc0MTQ3Nzc5LDc2Mz
+IwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1MF19
 -->
