--- a/Lab300.md
+++ b/Lab300.md
@@ -38,6 +38,7 @@
 **STEP 3: adwc 버켓을 생성하고 데이터를 업로드합니다.**
 ![enter image description here](https://lh3.googleusercontent.com/H6xf3A2FuhoHptS2NPcmTgVxhPXjyj6QAU5Yj8IzUYfH1faNXQYs-I7oWroM0t_NKCivhqBZ9__i)
 
+* adwc 라는 이름을 가진 버켓을 생성합니다. compartment는 default로 설정되는 root compartment를 선택합니다.(ManagedCompartmentForPaaS는 선택하면 안됩니다.)
 ![enter image description here](https://lh3.googleusercontent.com/Cgvu3Dw49oXLAAu2m3Wo3uJEo3Zim7NfRDupW7dO0QTwp1AILPGLgox4VqTwgrIK361W7Luaz_EW)
 
 ![enter image description here](https://lh3.googleusercontent.com/wMDpjpjt8Fk-Gyb0rR1rXg_QM5Zff4HzoFD2tbt9ejkDXaq4jhdD8L-eLwyJrc5hDQlEJWfgBe5l)
@@ -130,6 +131,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODA4MzczMjQ3LC0xMjc0MTQ3Nzc5LDc2Mz
-IwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1MF19
+eyJoaXN0b3J5IjpbLTIwMjc2MDIwODIsODA4MzczMjQ3LC0xMj
+c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
+MF19
 -->
