Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -43,6 +43,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/wMDpjpjt8Fk-Gyb0rR1rXg_QM5Zff4HzoFD2tbt9ejkDXaq4jhdD8L-eLwyJrc5hDQlEJWfgBe5l)
 
+* adwc 버켓을 선택하고 install.zip 파일에서 압축 푼 폴더에 있는 credit_scoring_100k.csv 파일을 업로드합니다.
 ![enter image description here](https://lh3.googleusercontent.com/Woz5EwJ7vMWuby8EGKuA9QHq-6TztEHDYkxQbV4f3abCBMZOO_utpXIKgbLzu3RhFTeo_D-onFsC)
 
 ![enter image description here](https://lh3.googleusercontent.com/d6BaXZSnJ3JnTUTT_iPaqk_hTWqFzNyBf8XZCJhRsD0-I44taytUY02TyMByPfYXhfFuFkkD4LOR)
@@ -53,6 +54,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/aupaIJFRMN1ZQj3FMkjRenECsMxFuB42cThpvyNtKS98dBxuKtjd38N2u7kTgrgBKnsgl7U6qmps)
 
+* 
 ![enter image description here](https://lh3.googleusercontent.com/ST-S49idBRKrLILLCVcL2vue9-9HLd-LYDGSScE6EMAbUUJQMAcStcfGwQonffLrpT94vNjS9Dpq)
 
 ![enter image description here](https://lh3.googleusercontent.com/Cg0hne2Vz-SMJdrcPLYipGMNVhR2ombx-2YRLD4a90zRkbBsXa53lavfJLGKNJBLg2FTR9bAehJ4)
@@ -131,7 +133,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMjc2MDIwODIsODA4MzczMjQ3LC0xMj
-c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
-MF19
+eyJoaXN0b3J5IjpbLTg2NDc2NDM5NSw4MDgzNzMyNDcsLTEyNz
+QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
+XX0=
 -->
