--- a/Lab300.md
+++ b/Lab300.md
@@ -54,11 +54,12 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/aupaIJFRMN1ZQj3FMkjRenECsMxFuB42cThpvyNtKS98dBxuKtjd38N2u7kTgrgBKnsgl7U6qmps)
 
-* 
+* import 프로세스를 위해 object 의 URL을 복사합니다.
 ![enter image description here](https://lh3.googleusercontent.com/ST-S49idBRKrLILLCVcL2vue9-9HLd-LYDGSScE6EMAbUUJQMAcStcfGwQonffLrpT94vNjS9Dpq)
 
 ![enter image description here](https://lh3.googleusercontent.com/Cg0hne2Vz-SMJdrcPLYipGMNVhR2ombx-2YRLD4a90zRkbBsXa53lavfJLGKNJBLg2FTR9bAehJ4)
 
+* OCI Obejct Storage의 파일을 ADWC에 로드하기 위해서는 사용자 증명(authentication)이 필요합니다. 
 ![enter image description here](https://lh3.googleusercontent.com/dXljt6K7rjGxx31hd_dxRm26PVv8EOHRoli69gjh-2KxLBLg2IgqF2gUzwbIIceC-JLOvDoeZQal)
 
 ![enter image description here](https://lh3.googleusercontent.com/YIlGSlCCtS2oOL1XhzZJkNTq3S-MEwT00y3U0m735hA9W1PTAN_kRUGXrLVTG_e8dSO3md_4y0EB)
@@ -133,7 +134,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg2NDc2NDM5NSw4MDgzNzMyNDcsLTEyNz
-QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
-XX0=
+eyJoaXN0b3J5IjpbNDAwNzI3NzczLDgwODM3MzI0NywtMTI3ND
+E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
+fQ==
 -->
