Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -59,7 +59,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/Cg0hne2Vz-SMJdrcPLYipGMNVhR2ombx-2YRLD4a90zRkbBsXa53lavfJLGKNJBLg2FTR9bAehJ4)
 
-* OCI Obejct Storage의 파일을 ADWC에 로드하기 위해서는 사용자 증명(authentication)이 필요합니다. 
+* OCI Object Storage의 파일을 ADWC에 로드하기 위해서는 사용자 증명(authentication)이 필요합니다. ADWC와 Object Storage간 communication을 위해서는 Swift Protocol을 사용하며 오라클 클라우드에서는 이를 Auth 
 ![enter image description here](https://lh3.googleusercontent.com/dXljt6K7rjGxx31hd_dxRm26PVv8EOHRoli69gjh-2KxLBLg2IgqF2gUzwbIIceC-JLOvDoeZQal)
 
 ![enter image description here](https://lh3.googleusercontent.com/YIlGSlCCtS2oOL1XhzZJkNTq3S-MEwT00y3U0m735hA9W1PTAN_kRUGXrLVTG_e8dSO3md_4y0EB)
@@ -134,7 +134,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDAwNzI3NzczLDgwODM3MzI0NywtMTI3ND
-E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
-fQ==
+eyJoaXN0b3J5IjpbLTEwNTUyNDQ5MjQsODA4MzczMjQ3LC0xMj
+c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
+MF19
 -->
