Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -59,11 +59,13 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/Cg0hne2Vz-SMJdrcPLYipGMNVhR2ombx-2YRLD4a90zRkbBsXa53lavfJLGKNJBLg2FTR9bAehJ4)
 
-* OCI Object Storage의 파일을 ADWC에 로드하기 위해서는 사용자 증명(authentication)이 필요합니다. ADWC와 Object Storage간 communication을 위해서는 Swift Protocol을 사용하며 오라클 클라우드에서는 이를 Auth 
+* OCI Object Storage의 파일을 ADWC에 로드하기 위해서는 사용자 증명(authentication)이 필요합니다. ADWC와 Object Storage간 communication을 위해서는 Swift Protocol을 사용하며 오라클 클라우드에서는 이를 Auth Token으로 명칭하고 있습니다. 메뉴바에서 [Identity -> Users]를 클릭합니다.
 ![enter image description here](https://lh3.googleusercontent.com/dXljt6K7rjGxx31hd_dxRm26PVv8EOHRoli69gjh-2KxLBLg2IgqF2gUzwbIIceC-JLOvDoeZQal)
 
+* username을 클릭합니다. 이 username은 추후 ADWC에서 credential을 생성할 때 사용하기 때문에 기억해 둡시다. (또는 따로 메모)
 ![enter image description here](https://lh3.googleusercontent.com/YIlGSlCCtS2oOL1XhzZJkNTq3S-MEwT00y3U0m735hA9W1PTAN_kRUGXrLVTG_e8dSO3md_4y0EB)
 
+* 왼쪽 메뉴에서
 ![enter image description here](https://lh3.googleusercontent.com/QXd4HTjA6DrwVDuHZwy36eohYHQfii285nrlPJFjAJgmKyX-Uttjhi6dygu98EXvklA3O2TXyIDg)
 
 ![enter image description here](https://lh3.googleusercontent.com/NncX-3mCscQeQzR4crt11bQ7xTiQ6au57Rp8pB4fzJ8_iM0iTTN-L14QIJvPlvaiJcAHuqSjW_jI)
@@ -134,7 +136,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTUyNDQ5MjQsODA4MzczMjQ3LC0xMj
+eyJoaXN0b3J5IjpbLTEwNDExMTA3NjAsODA4MzczMjQ3LC0xMj
 c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
 MF19
 -->
