--- a/Lab300.md
+++ b/Lab300.md
@@ -65,7 +65,7 @@
 * username을 클릭합니다. 이 username은 추후 ADWC에서 credential을 생성할 때 사용하기 때문에 기억해 둡시다. (또는 따로 메모)
 ![enter image description here](https://lh3.googleusercontent.com/YIlGSlCCtS2oOL1XhzZJkNTq3S-MEwT00y3U0m735hA9W1PTAN_kRUGXrLVTG_e8dSO3md_4y0EB)
 
-* 왼쪽 메뉴에서
+* 왼쪽 메뉴에서 Auth Tokens을 클릭하여 Token을 생성합니다.
 ![enter image description here](https://lh3.googleusercontent.com/QXd4HTjA6DrwVDuHZwy36eohYHQfii285nrlPJFjAJgmKyX-Uttjhi6dygu98EXvklA3O2TXyIDg)
 
 ![enter image description here](https://lh3.googleusercontent.com/NncX-3mCscQeQzR4crt11bQ7xTiQ6au57Rp8pB4fzJ8_iM0iTTN-L14QIJvPlvaiJcAHuqSjW_jI)
@@ -74,7 +74,9 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/YUHOjI91ygTtdlN942nPS-CohlivIU3wP542qsZXacJcLvw4cIj4PtZltpEcDFf8i6rZwJwIX9M5)
 
-
+**STEP 4: Database Credential 생성하기**
+* Object Store의 데이터에 액세스하려면 OCI Object Store 계정 및 Auth 토큰을 사용하여 데이터베이스 사용자가 Object Store로 인증 할 수 있어야합니다. Autonomous Data Warehouse에 암호화 된이 정보를 저장하는 사용자의 개인 CREDENTIAL 개체를 생성하면됩니다. 이 정보는 사용자 스키마에만 사용할 수 있습니다.
+ 
 ![enter image description here](https://lh3.googleusercontent.com/BvkULkJaScKiUMhp-fhiypyJj0U02_if5r89DE96xzZ3SyQZWZHqb0SURhp0gpKik7Knjpsb8c7t)
 
 ![enter image description here](https://lh3.googleusercontent.com/Oz34iB6h-MHOaymm6Z_8-3HvTGKyuM3HLDthQWFSh8ZeQFh7unFxR8Bp-55s4nAJSTMeB3OAh3B9)
@@ -136,7 +138,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDExMTA3NjAsODA4MzczMjQ3LC0xMj
-c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
-MF19
+eyJoaXN0b3J5IjpbNjQ0NTAzMjQzLDgwODM3MzI0NywtMTI3ND
+E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
+fQ==
 -->
