Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -75,7 +75,9 @@
 ![enter image description here](https://lh3.googleusercontent.com/YUHOjI91ygTtdlN942nPS-CohlivIU3wP542qsZXacJcLvw4cIj4PtZltpEcDFf8i6rZwJwIX9M5)
 
 **STEP 4: Database Credential 생성하기**
-* Object Store의 데이터에 액세스하려면 OCI Object Store 계정 및 Auth 토큰을 사용하여 데이터베이스 사용자가 Object Store로 인증 할 수 있어야합니다. Autonomous Data Warehouse에 암호화 된이 정보를 저장하는 사용자의 개인 CREDENTIAL 개체를 생성하면됩니다. 이 정보는 사용자 스키마에만 사용할 수 있습니다.
+* Object Store의 데이터에 액세스하려면 OCI Object Store 계정 및 Auth 토큰을 사용하여 데이터베이스 사용자가 Object Store로 인증 할 수 있어야합니다. Autonomous Data Warehouse에는 이러한 암호화된 정보를 저장하는 CREDENTIAL 오브젝트를 생성합니다. 이 정보는 사용자 스키마에만 사용할 수 있습니다.
+
+* SQL Developer에서 사용자로 연결하여 이것을 복사하여 SQL Developer 워크 시트에 붙여 넣으십시오. Oracle Cloud Infrastructure Object Storage 서비스의 authentication을 지정하십시오. 사용자 이름은 OCI 사용자 이름 (이전 단계에서 Identity -> Users 에 등록된 username)과 이전 단계에서 생성 한 OCI 객체 저장소 인증 토큰이됩니다. 이 예에서는 OBJ_STORE_CRED라는 이름의 신임 오브젝트가 작성됩니다. 다음 단계에서이 신임 이름을 참조합니다.
  
 ![enter image description here](https://lh3.googleusercontent.com/BvkULkJaScKiUMhp-fhiypyJj0U02_if5r89DE96xzZ3SyQZWZHqb0SURhp0gpKik7Knjpsb8c7t)
 
@@ -138,7 +140,7 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQ0NTAzMjQzLDgwODM3MzI0NywtMTI3ND
-E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
-fQ==
+eyJoaXN0b3J5IjpbLTg3MTUwMjQ0Niw4MDgzNzMyNDcsLTEyNz
+QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
+XX0=
 -->
