--- a/Lab300.md
+++ b/Lab300.md
@@ -93,9 +93,108 @@ END;
 ```
 
 ![enter image description here](https://lh3.googleusercontent.com/BvkULkJaScKiUMhp-fhiypyJj0U02_if5r89DE96xzZ3SyQZWZHqb0SURhp0gpKik7Knjpsb8c7t)
-* 이제 Object Storage에 데이터를 로
+* 이제 Object Storage에 데이터를 로드할 준비가 되었습니다.
+
+**5단계 : dbms_cloud.copy_data 패키지를 사용하여 데이터로드**
+
+* 먼저 테이블을 만듭니다. SQLDeveloper에 다음을 입력하세요.
+
+```
+create table admin.credit_scoring_100k 
+   (	customer_id number(38,0), 
+	age number(4,0), 
+	income number(38,0), 
+	marital_status varchar2(26 byte), 
+	number_of_liables number(3,0), 
+	wealth varchar2(4000 byte), 
+	education_level varchar2(26 byte), 
+	tenure number(4,0), 
+	loan_type varchar2(26 byte), 
+	loan_amount number(38,0), 
+	loan_length number(5,0), 
+	gender varchar2(26 byte), 
+	region varchar2(26 byte), 
+	current_address_duration number(5,0), 
+	residental_status varchar2(26 byte), 
+	number_of_prior_loans number(3,0), 
+	number_of_current_accounts number(3,0), 
+	number_of_saving_accounts number(3,0), 
+	occupation varchar2(26 byte), 
+	has_checking_account varchar2(26 byte), 
+	credit_history varchar2(26 byte), 
+	present_employment_since varchar2(26 byte), 
+	fixed_income_rate number(4,1), 
+	debtor_guarantors varchar2(26 byte), 
+	has_own_phone_no varchar2(26 byte), 
+	has_same_phone_no_since number(4,0), 
+	is_foreign_worker varchar2(26 byte), 
+	number_of_open_accounts number(3,0), 
+	number_of_closed_accounts number(3,0), 
+	number_of_inactive_accounts number(3,0), 
+	number_of_inquiries number(3,0), 
+	highest_credit_card_limit number(7,0), 
+	credit_card_utilization_rate number(4,1), 
+	delinquency_status varchar2(26 byte), 
+	new_bankruptcy varchar2(26 byte), 
+	number_of_collections number(3,0), 
+	max_cc_spent_amount number(7,0), 
+	max_cc_spent_amount_prev number(7,0), 
+	has_collateral varchar2(26 byte), 
+	family_size number(3,0), 
+	city_size varchar2(26 byte), 
+	fathers_job varchar2(26 byte), 
+	mothers_job varchar2(26 byte), 
+	most_spending_type varchar2(26 byte), 
+	second_most_spending_type varchar2(26 byte), 
+	third_most_spending_type varchar2(26 byte), 
+	school_friends_percentage number(3,1), 
+	job_friends_percentage number(3,1), 
+	number_of_protestor_likes number(4,0), 
+	no_of_protestor_comments number(3,0), 
+	no_of_linkedin_contacts number(5,0), 
+	average_job_changing_period number(4,0), 
+	no_of_debtors_on_fb number(3,0), 
+	no_of_recruiters_on_linkedin number(4,0), 
+	no_of_total_endorsements number(4,0), 
+	no_of_followers_on_twitter number(5,0), 
+	mode_job_of_contacts varchar2(26 byte), 
+	average_no_of_retweets number(4,0), 
+	facebook_influence_score number(3,1), 
+	percentage_phd_on_linkedin number(4,0), 
+	percentage_masters number(4,0), 
+	percentage_ug number(4,0), 
+	percentage_high_school number(4,0), 
+	percentage_other number(4,0), 
+	is_posted_sth_within_a_month varchar2(26 byte), 
+	most_popular_post_category varchar2(26 byte), 
+	interest_rate number(4,1), 
+	earnings number(4,1), 
+	unemployment_index number(5,1), 
+	production_index number(6,1), 
+	housing_index number(7,2), 
+	consumer_confidence_index number(4,2), 
+	inflation_rate number(5,2), 
+	customer_value_segment varchar2(26 byte), 
+	customer_dmg_segment varchar2(26 byte), 
+	customer_lifetime_value number(8,0), 
+	churn_rate_of_cc1 number(4,1), 
+	churn_rate_of_cc2 number(4,1), 
+	churn_rate_of_ccn number(5,2), 
+	churn_rate_of_account_no1 number(4,1), 
+	churn_rate__of_account_no2 number(4,1), 
+	churn_rate_of_account_non number(4,2), 
+	health_score number(3,0), 
+	customer_depth number(3,0), 
+	lifecycle_stage number(38,0), 
+	credit_score_bin varchar2(100 byte)
+   );
+
+	 grant select any table to public;
+```
+
 ![enter image description here](https://lh3.googleusercontent.com/Oz34iB6h-MHOaymm6Z_8-3HvTGKyuM3HLDthQWFSh8ZeQFh7unFxR8Bp-55s4nAJSTMeB3OAh3B9)
 
+* 테이블을 마우스 우클릭하여 ㅌ
 ![enter image description here](https://lh3.googleusercontent.com/MzPlBDqU5uciswIjlSpjovua6c99Pv7tug28N2BO-oZsRceH-bU9QLj9KCKLInKkdhuN6Hog9PkF)
 
 ![enter image description here](https://lh3.googleusercontent.com/tWuDqxStHnNd6-AK96XM4VS6D-EAsUigcNutXtS_ND0F56Ri9EE1Y1vTzD81-cLhU9D6tAuHKfwy)
@@ -153,7 +252,7 @@ END;
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE4NDM1NzY0Niw4MDgzNzMyNDcsLTEyNz
+eyJoaXN0b3J5IjpbLTE4MzA2NTI5MSw4MDgzNzMyNDcsLTEyNz
 QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
 XX0=
 -->
