Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -194,11 +194,26 @@ create table admin.credit_scoring_100k
 
 ![enter image description here](https://lh3.googleusercontent.com/Oz34iB6h-MHOaymm6Z_8-3HvTGKyuM3HLDthQWFSh8ZeQFh7unFxR8Bp-55s4nAJSTMeB3OAh3B9)
 
-* 테이블을 마우스 우클릭하여 ㅌ
+* 테이블을 마우스 우클릭하여 테이블 목록을 새로고침 합니다.
 ![enter image description here](https://lh3.googleusercontent.com/MzPlBDqU5uciswIjlSpjovua6c99Pv7tug28N2BO-oZsRceH-bU9QLj9KCKLInKkdhuN6Hog9PkF)
+
+* 다음의 코드를 실행하세요.
+```
+begin
+ dbms_cloud.copy_data(
+    table_name =>'credit_scoring_100k',
+    credential_name =>'adwc_token',
+    file_uri_list => 'https://objectstorage.<your data center - eg us-ashburn-1>/n/<your tenant - eg dgcameron2>/adwc/o/credit_scoring_100k.csv',
+    format => json_object('ignoremissingcolumns' value 'true', 'removequotes' value 'true', 'dateformat' value 'YYYY-MM-DD HH24:MI:SS', 'blankasnull' value 'true', 'delimiter' value ',', 'skipheaders' value '1')
+ );
+end;
+/
+```
+
 
 ![enter image description here](https://lh3.googleusercontent.com/tWuDqxStHnNd6-AK96XM4VS6D-EAsUigcNutXtS_ND0F56Ri9EE1Y1vTzD81-cLhU9D6tAuHKfwy)
 
+* 왼쪽 메뉴의 테이블을 선택하여 데이터 탭을 선택, 데이터가 잘 
 ![enter image description here](https://lh3.googleusercontent.com/kwYJLbuPo_ULUGThqnrekZmh8IP-N8SDBWiAazobrPIWZpC_MGnW9rd74iVMd2Bpn_TWJbLZL6Ok)
 
 ![
@@ -252,7 +267,7 @@ create table admin.credit_scoring_100k
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MzA2NTI5MSw4MDgzNzMyNDcsLTEyNz
-QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
-XX0=
+eyJoaXN0b3J5IjpbNDQ4ODU2Nyw4MDgzNzMyNDcsLTEyNzQxND
+c3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
+
 -->
