Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -213,8 +213,22 @@ end;
 
 ![enter image description here](https://lh3.googleusercontent.com/tWuDqxStHnNd6-AK96XM4VS6D-EAsUigcNutXtS_ND0F56Ri9EE1Y1vTzD81-cLhU9D6tAuHKfwy)
 
-* 왼쪽 메뉴의 테이블을 선택하여 데이터 탭을 선택, 데이터가 잘 
+* 왼쪽 메뉴의 테이블을 선택하여 데이터 탭을 선택, 데이터가 잘 로드되었는지 확인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/kwYJLbuPo_ULUGThqnrekZmh8IP-N8SDBWiAazobrPIWZpC_MGnW9rd74iVMd2Bpn_TWJbLZL6Ok)
+
+## Oracle Machine 
+* 로그인이 안되어 있다면 로그인합니다.
+![enter image description here](https://lh3.googleusercontent.com/k_Tsar6cIheJ_wl-PkWNrvvGMGH_mCshO3c4vjqYkK00NNqw2cLOJ2KZcaS2NS5XOAeYrlVAEVcQ)
+
+![enter image description here](https://lh3.googleusercontent.com/SHic1SedRmpOrNItv9cd5-Y9HO3LMXNV3nW2ECkUh-KbyGEvHPursMrvexOcOcui3dlATS97tC2F)
+
+![enter image description here](https://lh3.googleusercontent.com/eJXmCpiKtUR4RMiMX9bBmaIWx_CzRT_lTQfPvhL7Xi975GH4GeNGNmhbNNcWcNNzx6deTBy7cF3I)
+
+* compute을 클릭합니다.
+![enter image description here](https://lh3.googleusercontent.com/fkl8eVzGyczvrpxi23B5CgNwD-TFNOod0gI36CjpEdG9k7LsT6crikVnhTbqCpnyQ-oftmacdKfY)
+
+![enter image description here](https://lh3.googleusercontent.com/VAhW98xpbRGJq_549c_s-STJP9LDi5gW0nVKR8ZAgNi5rTCKC1yELh_TVoar1K26HzBMKmSVPdGV)
+
 
 ![
 ](https://lh3.googleusercontent.com/T6P-gwx1t6JTX0cr7caI8GY0LNKRtA_EFN4P6kvNHP_kdgi5fFxoRyf0MfG4MTgIsOh8oLeeHJfq)
@@ -266,8 +280,10 @@ end;
 ![enter image description here](https://lh3.googleusercontent.com/A2EnoBO5o6nGgp0D6tU65ylmxIkafyCXFpBS23-DprqIISFujE5YXGxWiusik8rgY8CY6mtcDvkB)
 
 ![enter image description here](https://lh3.googleusercontent.com/96ctQDXADMpSVNSqu4DfR_9isRIOwgpSLJriFxE7XToHAaiuZHEbYuBmI43kiDDvrn5IVmLdbUz2)
-<!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQ4ODU2Nyw4MDgzNzMyNDcsLTEyNzQxND
-c3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUwXX0=
 
+
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTIwNzA3NTg4NSw4MDgzNzMyNDcsLTEyNz
+QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
+XX0=
 -->
