--- a/Lab300.md
+++ b/Lab300.md
@@ -216,8 +216,11 @@ end;
 * 왼쪽 메뉴의 테이블을 선택하여 데이터 탭을 선택, 데이터가 잘 로드되었는지 확인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/kwYJLbuPo_ULUGThqnrekZmh8IP-N8SDBWiAazobrPIWZpC_MGnW9rd74iVMd2Bpn_TWJbLZL6Ok)
 
-## Oracle Machine 
-* 로그인이 안되어 있다면 로그인합니다.
+## Oracle Machine Learning에 로그인합니다.
+
+* 이제 해미가 데이터 로드를 완료하였으므로 Oracle Cloud Console에 로그인한 다음 Machine Learning Console에 로그인 하겠습니다.
+
+* 클라우드 콘솔에 로그인이 안되어 있다면 로그인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/k_Tsar6cIheJ_wl-PkWNrvvGMGH_mCshO3c4vjqYkK00NNqw2cLOJ2KZcaS2NS5XOAeYrlVAEVcQ)
 
 ![enter image description here](https://lh3.googleusercontent.com/SHic1SedRmpOrNItv9cd5-Y9HO3LMXNV3nW2ECkUh-KbyGEvHPursMrvexOcOcui3dlATS97tC2F)
@@ -283,7 +286,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzA3NTg4NSw4MDgzNzMyNDcsLTEyNz
-QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
-XX0=
+eyJoaXN0b3J5IjpbODU0NDU5NTMsODA4MzczMjQ3LC0xMjc0MT
+Q3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1MF19
+
 -->
