--- a/Lab300.md
+++ b/Lab300.md
@@ -232,10 +232,11 @@ end;
 
 	![enter image description here](https://lh3.googleusercontent.com/VAhW98xpbRGJq_549c_s-STJP9LDi5gW0nVKR8ZAgNi5rTCKC1yELh_TVoar1K26HzBMKmSVPdGV)
 
-
+* 왼쪽 메뉴바에서 [Autonomous Data Warehouse]를 클릭합니다.
 	![
 ](https://lh3.googleusercontent.com/T6P-gwx1t6JTX0cr7caI8GY0LNKRtA_EFN4P6kvNHP_kdgi5fFxoRyf0MfG4MTgIsOh8oLeeHJfq)
 
+* 서비스 콘솔을 선택합니다.
 	![
 ](https://lh3.googleusercontent.com/jqKiH-YxLRSHyywiLYxxCER7P_usArncoGuU-XFMQXK6c0yftn8PZvLAsRNwMNCadlbupoZKmBNh)
 
@@ -286,7 +287,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNDg4Mjc4MTUsODA4MzczMjQ3LC0xMj
-c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
-MF19
+eyJoaXN0b3J5IjpbNDk0MTk1OTQzLDgwODM3MzI0NywtMTI3ND
+E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
+fQ==
 -->
