--- a/Lab300.md
+++ b/Lab300.md
@@ -237,12 +237,13 @@ end;
 ](https://lh3.googleusercontent.com/T6P-gwx1t6JTX0cr7caI8GY0LNKRtA_EFN4P6kvNHP_kdgi5fFxoRyf0MfG4MTgIsOh8oLeeHJfq)
 
 * 서비스 콘솔을 선택합니다.
-	![
+![
 ](https://lh3.googleusercontent.com/jqKiH-YxLRSHyywiLYxxCER7P_usArncoGuU-XFMQXK6c0yftn8PZvLAsRNwMNCadlbupoZKmBNh)
 
-	![enter image description here](https://lh3.googleusercontent.com/YPt5st4EucoSMqGMhLfmAj5e8_7J-4YDHPHjudLUcYgMP5d4FCX2inSNFyHQ8foE2mUk9IHNZ1-Q)
+* Administration 메뉴의 [Manage Oracle ML Users]를 클릭합니다.	![enter image description here](https://lh3.googleusercontent.com/YPt5st4EucoSMqGMhLfmAj5e8_7J-4YDHPHjudLUcYgMP5d4FCX2inSNFyHQ8foE2mUk9IHNZ1-Q)
 
-	![enter image description here](https://lh3.googleusercontent.com/O4lboOVlWyuzIdmtcP8vOgwQAqM_i4uNu8bVhb8G97TAC1u4UHmCkAL8Re6pcCYEv7vZTVWqOPnZ)
+* ㅇ
+![enter image description here](https://lh3.googleusercontent.com/O4lboOVlWyuzIdmtcP8vOgwQAqM_i4uNu8bVhb8G97TAC1u4UHmCkAL8Re6pcCYEv7vZTVWqOPnZ)
 
 	![enter image description here](https://lh3.googleusercontent.com/I4DFCfb1O96ALY6UC0ZW3tdZDwsgelW2mfdT75rmYz5JqU1Qe8UmCPq6EedRK_xjUwUrf3hdtbmR)
 
@@ -287,7 +288,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDk0MTk1OTQzLDgwODM3MzI0NywtMTI3ND
-E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
-fQ==
+eyJoaXN0b3J5IjpbMjEyMjYxMjU1MCw4MDgzNzMyNDcsLTEyNz
+QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
+XX0=
 -->
