--- a/Lab300.md
+++ b/Lab300.md
@@ -242,10 +242,11 @@ end;
 
 * Administration 메뉴의 [Manage Oracle ML Users]를 클릭합니다.	![enter image description here](https://lh3.googleusercontent.com/YPt5st4EucoSMqGMhLfmAj5e8_7J-4YDHPHjudLUcYgMP5d4FCX2inSNFyHQ8foE2mUk9IHNZ1-Q)
 
-* ㅇ
+* 인스턴스를 만들 때 할당한 admin/password 로 로그인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/O4lboOVlWyuzIdmtcP8vOgwQAqM_i4uNu8bVhb8G97TAC1u4UHmCkAL8Re6pcCYEv7vZTVWqOPnZ)
 
-	![enter image description here](https://lh3.googleusercontent.com/I4DFCfb1O96ALY6UC0ZW3tdZDwsgelW2mfdT75rmYz5JqU1Qe8UmCPq6EedRK_xjUwUrf3hdtbmR)
+
+![enter image description here](https://lh3.googleusercontent.com/I4DFCfb1O96ALY6UC0ZW3tdZDwsgelW2mfdT75rmYz5JqU1Qe8UmCPq6EedRK_xjUwUrf3hdtbmR)
 
 	![enter image description here](https://lh3.googleusercontent.com/MioHetVFWrmjchWuJvu1GCR0z9oH5a6xW8FsDa0BhlPi2bM23N-xrGKyHBJBvHOcks2jIgI6EEBt)
 
@@ -288,7 +289,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEyMjYxMjU1MCw4MDgzNzMyNDcsLTEyNz
-QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
-XX0=
+eyJoaXN0b3J5IjpbLTExMzExNjA5NzQsODA4MzczMjQ3LC0xMj
+c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
+MF19
 -->
