--- a/Lab300.md
+++ b/Lab300.md
@@ -245,7 +245,7 @@ end;
 * 인스턴스를 만들 때 할당한 admin/password 로 로그인합니다.
 ![enter image description here](https://lh3.googleusercontent.com/O4lboOVlWyuzIdmtcP8vOgwQAqM_i4uNu8bVhb8G97TAC1u4UHmCkAL8Re6pcCYEv7vZTVWqOPnZ)
 
-
+* 새로운 ML user를 만듭니다. adwc_ws 유저가 사용할 패스워드를 지정합니다. (Alpha2018___)
 ![enter image description here](https://lh3.googleusercontent.com/I4DFCfb1O96ALY6UC0ZW3tdZDwsgelW2mfdT75rmYz5JqU1Qe8UmCPq6EedRK_xjUwUrf3hdtbmR)
 
 	![enter image description here](https://lh3.googleusercontent.com/MioHetVFWrmjchWuJvu1GCR0z9oH5a6xW8FsDa0BhlPi2bM23N-xrGKyHBJBvHOcks2jIgI6EEBt)
@@ -289,7 +289,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzExNjA5NzQsODA4MzczMjQ3LC0xMj
-c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
-MF19
+eyJoaXN0b3J5IjpbMjEzNDI4NTQ1NSw4MDgzNzMyNDcsLTEyNz
+QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
+XX0=
 -->
