Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -250,6 +250,8 @@ end;
 
 	![enter image description here](https://lh3.googleusercontent.com/MioHetVFWrmjchWuJvu1GCR0z9oH5a6xW8FsDa0BhlPi2bM23N-xrGKyHBJBvHOcks2jIgI6EEBt)
 
+* 오른쪽 상단의 홈 아이콘을 클릭합니다.
+![enter image description here](https://lh3.googleusercontent.com/JUrNegcuzPQIuGWhGzcNHe-hbFo4wwBzH71v9Xcpz90QTWH9JAI7EluREux9pKWXh4VSVx23NCiq)
 	![enter image description here](https://lh3.googleusercontent.com/WgjrdpioifSionSWTo5-OlFIIrWlgjE4btrHsCth_B0tvvad8PHJ37Yif2GjKPwrN64XPh0elFoQ)
 
 	![enter image description here](https://lh3.googleusercontent.com/AAdicpXETzEj-GjJTLitKCe4mJgCMeo8k-vun89WI4tHi9BJJifoA2pb_uUBgzybDAF6Zn2sURsg)
@@ -289,7 +291,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEzNDI4NTQ1NSw4MDgzNzMyNDcsLTEyNz
-QxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTksMTIxMDEzOTUw
-XX0=
+eyJoaXN0b3J5IjpbLTY1MjEzOTU1LDgwODM3MzI0NywtMTI3ND
+E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
+fQ==
 -->
