Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -252,11 +252,15 @@ end;
 
 * 오른쪽 상단의 홈 아이콘을 클릭합니다.
 ![enter image description here](https://lh3.googleusercontent.com/JUrNegcuzPQIuGWhGzcNHe-hbFo4wwBzH71v9Xcpz90QTWH9JAI7EluREux9pKWXh4VSVx23NCiq)
-	![enter image description here](https://lh3.googleusercontent.com/WgjrdpioifSionSWTo5-OlFIIrWlgjE4btrHsCth_B0tvvad8PHJ37Yif2GjKPwrN64XPh0elFoQ)
 
-	![enter image description here](https://lh3.googleusercontent.com/AAdicpXETzEj-GjJTLitKCe4mJgCMeo8k-vun89WI4tHi9BJJifoA2pb_uUBgzybDAF6Zn2sURsg)
+* `adwc_ws`암호 로 로그인하십시오 `Alpha2018___`.
+![enter image description here](https://lh3.googleusercontent.com/WgjrdpioifSionSWTo5-OlFIIrWlgjE4btrHsCth_B0tvvad8PHJ37Yif2GjKPwrN64XPh0elFoQ)
 
-	![enter image description here](https://lh3.googleusercontent.com/0KxKc_4toURqDUVZPULWQJiPJIF-pfVlbMf3hljHiGzTsgq5PbxjpS4Nfy1HjjhH07vhcqyPzUDQ)
+* ML 콘솔을 살펴보면서 화면 및 기능에 친숙해져 봅니다. 예제 파일을 담고 있는 Examples 메뉴를 클릭합니다.
+![enter image description here](https://lh3.googleusercontent.com/AAdicpXETzEj-GjJTLitKCe4mJgCMeo8k-vun89WI4tHi9BJJifoA2pb_uUBgzybDAF6Zn2sURsg)
+
+* 다양한 예제 파일들이 있습니다. 오라클 ML(Machine Learning)을 배울 수 있는 가장 좋은 방법 입니다. 예제를 통해 각 알고리즘을 다루는 방식
+![enter image description here](https://lh3.googleusercontent.com/0KxKc_4toURqDUVZPULWQJiPJIF-pfVlbMf3hljHiGzTsgq5PbxjpS4Nfy1HjjhH07vhcqyPzUDQ)
 
 	![enter image description here](https://lh3.googleusercontent.com/4gImuFDYua1OlwgOXp7YEzIufXd9FNy_tny3Wt-ianh5vRvnQNscePgO2-HF5T9pOYJPFOOwS096)
 
@@ -291,7 +295,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY1MjEzOTU1LDgwODM3MzI0NywtMTI3ND
-E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
-fQ==
+eyJoaXN0b3J5IjpbLTEwMjA0ODI3NzQsODA4MzczMjQ3LC0xMj
+c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
+MF19
 -->
