Lab300.md updated from https://stackedit.io/

--- a/Lab300.md
+++ b/Lab300.md
@@ -259,12 +259,15 @@ end;
 * ML 콘솔을 살펴보면서 화면 및 기능에 친숙해져 봅니다. 예제 파일을 담고 있는 Examples 메뉴를 클릭합니다.
 ![enter image description here](https://lh3.googleusercontent.com/AAdicpXETzEj-GjJTLitKCe4mJgCMeo8k-vun89WI4tHi9BJJifoA2pb_uUBgzybDAF6Zn2sURsg)
 
-* 다양한 예제 파일들이 있습니다. 오라클 ML(Machine Learning)을 배울 수 있는 가장 좋은 방법 입니다. 예제를 통해 각 알고리즘을 다루는 방식
+* 다양한 예제 파일들이 있습니다. 오라클 ML(Machine Learning)을 배울 수 있는 가장 좋은 방법 입니다. 예제를 통해 각 알고리즘을 다루는 방식을 연습하는 것이 좋습니다.
 ![enter image description here](https://lh3.googleusercontent.com/0KxKc_4toURqDUVZPULWQJiPJIF-pfVlbMf3hljHiGzTsgq5PbxjpS4Nfy1HjjhH07vhcqyPzUDQ)
 
-	![enter image description here](https://lh3.googleusercontent.com/4gImuFDYua1OlwgOXp7YEzIufXd9FNy_tny3Wt-ianh5vRvnQNscePgO2-HF5T9pOYJPFOOwS096)
+* 우리는 새로운 ML Notebook을 만들것 입니다. 왼쪽 상단의 아이콘을 클릭하면 메뉴가 다시 나타납니다. 그 다음 [Notebook]을 선택합니다.
+![enter image description here](https://lh3.googleusercontent.com/4gImuFDYua1OlwgOXp7YEzIufXd9FNy_tny3Wt-ianh5vRvnQNscePgO2-HF5T9pOYJPFOOwS096)
 
 	![enter image description here](https://lh3.googleusercontent.com/AIWz5Y7KfxC5XuzuRiTkPrzDnxdLMsf66koi-qonREp43_sx_rBf3OuQa5sw_JTW6t5BvRXJKrf_)
+
+* 사전에 준
 ![enter image description here](https://lh3.googleusercontent.com/Wk80GnfUgtlnFXzdDkjz_Sam8ll3MNTR4gcxlYfYSQ1SHCZf6yW2pEJCSPKnAD4v1ManJqMHiu-6)
 
 	![enter image description here](https://lh3.googleusercontent.com/Y9WLen1EBcMUjE6FeWxLk1qf67XWJyseHXYF3o6TGakbyXO-2jsSHZPgkCjN4ue_HEIHkvekQOzE)
@@ -295,7 +298,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjA0ODI3NzQsODA4MzczMjQ3LC0xMj
+eyJoaXN0b3J5IjpbLTEyNzM4NjAzNTUsODA4MzczMjQ3LC0xMj
 c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
 MF19
 -->
