--- a/Lab300.md
+++ b/Lab300.md
@@ -267,12 +267,14 @@ end;
 
 	![enter image description here](https://lh3.googleusercontent.com/AIWz5Y7KfxC5XuzuRiTkPrzDnxdLMsf66koi-qonREp43_sx_rBf3OuQa5sw_JTW6t5BvRXJKrf_)
 
-* 사전에 준
+* 사전에 구축된 노트북을 가져와 실습에서 사용하겠습니다. [Import]를 클릭합니다. 
 ![enter image description here](https://lh3.googleusercontent.com/Wk80GnfUgtlnFXzdDkjz_Sam8ll3MNTR4gcxlYfYSQ1SHCZf6yW2pEJCSPKnAD4v1ManJqMHiu-6)
 
-	![enter image description here](https://lh3.googleusercontent.com/Y9WLen1EBcMUjE6FeWxLk1qf67XWJyseHXYF3o6TGakbyXO-2jsSHZPgkCjN4ue_HEIHkvekQOzE)
+* 실습 앞단에서 다운로드 받은 폴더에 Credit_Score_Prediction4.json 파일을 선택합니다.
+![enter image description here](https://lh3.googleusercontent.com/Y9WLen1EBcMUjE6FeWxLk1qf67XWJyseHXYF3o6TGakbyXO-2jsSHZPgkCjN4ue_HEIHkvekQOzE)
 
-	![enter image description here](https://lh3.googleusercontent.com/k7vlfMDABXy187iBSCHypiTQTfpFMf8NLWZEJs4NhvG_XkmxR9o-GFFXu9iCi4pr35GyJedmTcXu)
+* import한 
+![enter image description here](https://lh3.googleusercontent.com/k7vlfMDABXy187iBSCHypiTQTfpFMf8NLWZEJs4NhvG_XkmxR9o-GFFXu9iCi4pr35GyJedmTcXu)
 
 ![enter image description here](https://lh3.googleusercontent.com/M6NXPVSpRS6qo0AqfeEuzeaqmgpUvADJ4iojUAdWiXTpmX0bpoCK9PV5fPZZNjznFefnuTXVnPkG)
 
@@ -298,7 +300,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzM4NjAzNTUsODA4MzczMjQ3LC0xMj
-c0MTQ3Nzc5LDc2MzIwNjAzNywxOTcwNjkxOTU5LDEyMTAxMzk1
-MF19
+eyJoaXN0b3J5IjpbNTcyOTI3ODM0LDgwODM3MzI0NywtMTI3ND
+E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
+fQ==
 -->
