--- a/Lab300.md
+++ b/Lab300.md
@@ -273,8 +273,11 @@ end;
 * 실습 앞단에서 다운로드 받은 폴더에 Credit_Score_Prediction4.json 파일을 선택합니다.
 ![enter image description here](https://lh3.googleusercontent.com/Y9WLen1EBcMUjE6FeWxLk1qf67XWJyseHXYF3o6TGakbyXO-2jsSHZPgkCjN4ue_HEIHkvekQOzE)
 
-* import한 
+* import한 노트북을 선택합니다.
 ![enter image description here](https://lh3.googleusercontent.com/k7vlfMDABXy187iBSCHypiTQTfpFMf8NLWZEJs4NhvG_XkmxR9o-GFFXu9iCi4pr35GyJedmTcXu)
+
+* 작업을 시작하기 전에 Interpreter binding을 설정합니다. 톱니바퀴 아이콘을 클릭합니다.
+
 
 ![enter image description here](https://lh3.googleusercontent.com/M6NXPVSpRS6qo0AqfeEuzeaqmgpUvADJ4iojUAdWiXTpmX0bpoCK9PV5fPZZNjznFefnuTXVnPkG)
 
@@ -300,7 +303,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTcyOTI3ODM0LDgwODM3MzI0NywtMTI3ND
+eyJoaXN0b3J5IjpbNzk5NTkzMTg4LDgwODM3MzI0NywtMTI3ND
 E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
 fQ==
 -->
