--- a/Lab300.md
+++ b/Lab300.md
@@ -279,7 +279,6 @@ end;
 * 작업을 시작하기 전에 Interpreter binding을 설정합니다. 톱니바퀴 아이콘을 클릭합니다.
 
 
-![enter image description here](https://lh3.googleusercontent.com/M6NXPVSpRS6qo0AqfeEuzeaqmgpUvADJ4iojUAdWiXTpmX0bpoCK9PV5fPZZNjznFefnuTXVnPkG)
 
 ![enter image description here](https://lh3.googleusercontent.com/F0JXX1D60m0k6ujMS0PC4Ye33fhhEQCgM2xtAPylEZN4gMv7MZ71-hX66BIstLKXsyfLQdrw_29i)
 
@@ -303,7 +302,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk5NTkzMTg4LDgwODM3MzI0NywtMTI3ND
-E0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1OSwxMjEwMTM5NTBd
-fQ==
+eyJoaXN0b3J5IjpbNTMyNjA5MTE1LDc5OTU5MzE4OCw4MDgzNz
+MyNDcsLTEyNzQxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTks
+MTIxMDEzOTUwXX0=
 -->
