--- a/Lab300.md
+++ b/Lab300.md
@@ -276,9 +276,9 @@ end;
 * import한 노트북을 선택합니다.
 ![enter image description here](https://lh3.googleusercontent.com/k7vlfMDABXy187iBSCHypiTQTfpFMf8NLWZEJs4NhvG_XkmxR9o-GFFXu9iCi4pr35GyJedmTcXu)
 
-* 작업을 시작하기 전에 Interpreter binding을 설정합니다. 톱니바퀴 아이콘을 클릭합니다.
+* 작업을 시작하기 전에 Interpreter binding을 설정합니다. 톱니바퀴 아이콘을 클릭하여 dbname_high
 
-
+![enter image description here](https://lh3.googleusercontent.com/hDQT5LAWOV1ZYKw0XpoUs2HGdRK00uOYz8x-J1zhAqOq9IeUVPd0pdwWjk5Kf7vmrxUCQBuJ-_xe)
 
 ![enter image description here](https://lh3.googleusercontent.com/F0JXX1D60m0k6ujMS0PC4Ye33fhhEQCgM2xtAPylEZN4gMv7MZ71-hX66BIstLKXsyfLQdrw_29i)
 
@@ -302,7 +302,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMyNjA5MTE1LDc5OTU5MzE4OCw4MDgzNz
-MyNDcsLTEyNzQxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTks
-MTIxMDEzOTUwXX0=
+eyJoaXN0b3J5IjpbLTE2MDUxNTQ4ODcsNzk5NTkzMTg4LDgwOD
+M3MzI0NywtMTI3NDE0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1
+OSwxMjEwMTM5NTBdfQ==
 -->
