--- a/Lab300.md
+++ b/Lab300.md
@@ -276,10 +276,11 @@ end;
 * import한 노트북을 선택합니다.
 ![enter image description here](https://lh3.googleusercontent.com/k7vlfMDABXy187iBSCHypiTQTfpFMf8NLWZEJs4NhvG_XkmxR9o-GFFXu9iCi4pr35GyJedmTcXu)
 
-* 작업을 시작하기 전에 Interpreter binding을 설정합니다. 톱니바퀴 아이콘을 클릭하여 dbname_high
-
+* 작업을 시작하기 전에 Interpreter binding을 설정합니다. 톱니바퀴 아이콘을 클릭하여 dbname_high 를 선택하고 저장합니다.
 ![enter image description here](https://lh3.googleusercontent.com/hDQT5LAWOV1ZYKw0XpoUs2HGdRK00uOYz8x-J1zhAqOq9IeUVPd0pdwWjk5Kf7vmrxUCQBuJ-_xe)
 
+* 이 실습의 나머지는 아래와 같이 대화식으로 수행됩니다. 각 paragraph를 실행하여 단계를 진행합니다. 
+* 샘플 코드에 대한 설명은 모두 주석 및 markdown으로 적어 놓았습니다. 참고하셔서 실습을 진행하시면 도
 ![enter image description here](https://lh3.googleusercontent.com/F0JXX1D60m0k6ujMS0PC4Ye33fhhEQCgM2xtAPylEZN4gMv7MZ71-hX66BIstLKXsyfLQdrw_29i)
 
 ![enter image description here](https://lh3.googleusercontent.com/ObE1rCcoP6HNNcSdfH01kj1tje9-hyn6NX-lsiY7vyPnAVMEOGJtkfNE8uxPJGt6bFIkHkdj6_no)
@@ -302,7 +303,7 @@ end;
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MDUxNTQ4ODcsNzk5NTkzMTg4LDgwOD
-M3MzI0NywtMTI3NDE0Nzc3OSw3NjMyMDYwMzcsMTk3MDY5MTk1
-OSwxMjEwMTM5NTBdfQ==
+eyJoaXN0b3J5IjpbNTY0OTY1ODQyLDc5OTU5MzE4OCw4MDgzNz
+MyNDcsLTEyNzQxNDc3NzksNzYzMjA2MDM3LDE5NzA2OTE5NTks
+MTIxMDEzOTUwXX0=
 -->
